--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+/my-portfolio/index.html -->
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -5,9 +7,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayla Topuz Portfolio</title>
+    <base href="%PUBLIC_URL%/">
   </head>
   <body>
-    
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
