--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-/my-portfolio/index.html -->
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/my-portfolio/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayla Topuz Portfolio</title>
-    <base href="%PUBLIC_URL%/">
   </head>
   <body>
     <div id="root"></div>
