--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/my-portfolio/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ayla Topuz Portfolio</title>
-    <script type="module" crossorigin src="/my-portfolio/assets/index.DEtoN1RW.js"></script>
+    <script type="module" crossorigin src="/my-portfolio/assets/index.CfoIe7ZA.js"></script>
     <link rel="stylesheet" crossorigin href="/my-portfolio/assets/index.wr43BI4M.css">
   </head>
   <body>
